Changed: Updated translations

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -62,12 +62,19 @@
   <string name="preference_double_page_label">Doppelseiten-Modus</string>
   <string name="preference_double_page_summary">Zwei Seiten gleichzeitig anzeigen</string>
   <string name="preference_fast_scroll_label">Schnelles scrollen</string>
+  <string name="preference_fast_scroll_summary">Ermöglicht es durch ziehen des Daumens schnell durch die Liste zu scrollen</string>
   <string name="preference_fit_to_screen_label">An Bildschirmgröße anpassen</string>
+  <string name="preference_fit_to_screen_summary">Vergrößere Bilder bei geringerer Auflösung als die Bildschirmauflösung</string>
   <string name="preference_full_screen_label">Vollbild</string>
   <string name="preference_full_screen_summary">Falls möglich Statusleiste verstecken</string>
   <string name="preference_high_quality_label">32 Bit Farbtiefe</string>
+  <string name="preference_high_quality_summary">Warnung! Dies kann die flüssige Darstellung verringern und zu einem höheren Speicherbedarf führen</string>
   <string name="preference_overlay_duration_label">Seitenzahl</string>
+  <string name="preference_overlay_duration_summary">Anzeigedauer der Seitenzahl</string>
+  <string name="preference_sample_label">Erzwungene Bildskalierung</string>
+  <string name="preference_sample_summary">Skalierung beim Laden eines Bildes anpassen, um  Speicher zu sparen</string>
   <string name="preference_zoom_label">Zoom</string>
+  <string name="preference_zoom_summary">Modus zur Seitenskalierung</string>
   <string name="preference_category_misc">Verschiedenes</string>
   <string name="preference_about">Über ComicsReader</string>
   <string name="preference_about_summary">Version und zusätzliche Lizenzen</string>
@@ -78,10 +85,18 @@
   <string name="password">Passwort</string>
   <string name="remember_password">Passwort speichern</string>
   <string name="contributors_label">Mitwirkende:</string>
+  <string name="contributors">- Jules Blok (natürliche Reihung der Seitenzahlen und Implementierung der Autorotation)\n- ultrapeer (Türkische Übersetzung und Französische Tippfehler)\n- Zufre (Spanisehe Übersetzung)\n- Kathjal auf Transifex (Italienische Übersetzung)\n- Shark103 auf Transifex (Polmische Übersetzung)\n- Xesusmosquera auf Transifex (Galicische Übersetzung)\n- Evropi auf Transifex (Griechische Übersetzung)\n- Anonymous (Russische Übersetzung)\n- Marcelo Ghelman auf Transifex (Portugiesische Übersetzung)</string>
   <string name="browser_album_title">Kein Titel</string>
+  <string name="preference_edges_resistance_label">Kanten-Widerstand</string>
+  <string name="preference_edges_resistance_summary">Widerstand vor dem Umblättern</string>
+  <string name="preference_page_transition_speed_label">Geschwindigkeit des Umblätterns</string>
+  <string name="preference_page_transition_speed_summary">Geschwindigkeit der Übergangsanimation zu nächsten/vorherigen Seite</string>
   <string name="preference_reading_direction_label">Leserichtung von rechts nach links</string>
+  <string name="preference_reading_direction_summary">Nach links wischen, um zur nächsten Seite zu  wechseln</string>
   <string name="preference_auto_rotate_label">Automatische Ausrichtung</string>
+  <string name="preference_auto_rotate_summary">(Experimentell) Ändert die Bildschirmausrichtung, um jede Seite optimal darzustellen</string>
   <string name="no_data">Keine Daten</string>
+  <string name="fullscreen_notice">Bitte scrollen Sie von oben nach unten, um das Optionsmenü anzuzeigen und den Vollbildmodus zu verlassen</string>
   <string name="quit">Beenden</string>
   <string name="thumbnail">Miniaturbild</string>
 </resources>
