--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
   <string name="about">About</string>
   <string name="about_author" translatable="false">© 2011–2015 Kervala</string>
   <string name="about_license">This application is published under GPLv3 licence:</string>
-  <string name="about_support" translatable="false">http://code.google.com/p/android-comicsreader/</string>
+  <string name="about_support" translatable="false">http://dev.kervala.net/projects/comicsreader/</string>
   <string name="about_unrar_version">UnRAR version: %s</string>
   <string name="about_version">Version: %s</string>
   <string name="about_revision">Revision: %s</string>
