--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -85,6 +85,15 @@
   <string name="password">Clave</string>
   <string name="remember_password">Recordar clave</string>
   <string name="contributors_label">Colaboradores:</string>
+  <string name="contributors">- Jules Blok (Orden natural de números en pie de página e implementación de auto-rotación)
+- Ultrapeer (Traducción del Turco y Francés)
+- Zufre (Traducción del Español)
+- Kathjal en Transifex (Traducción del Italiano)
+- Shark103 en Transifex (Traducción del Polaco)
+- Xesusmosquera en Transifex (Traducción del Gallego)
+- Evropi en Transifex (Traducción del Griego)
+- Anónimo (Traducción del Ruso)
+- Marcelo Ghelman en Transifex (Traducción del Portugués) </string>
   <string name="browser_album_title">Sin título</string>
   <string name="preference_edges_resistance_label">Resistencia bordes</string>
   <string name="preference_edges_resistance_summary">Resistencia antes de cambiar la página</string>
@@ -97,4 +106,5 @@
   <string name="no_data">Sin datos</string>
   <string name="fullscreen_notice">Por favor desplácese de arriba a abajo para ver el menú de opciones y salir del modo de pantalla completa.</string>
   <string name="quit">Salir</string>
+  <string name="thumbnail">Miniatura</string>
 </resources>
