--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,102 +1,102 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="icon">아이콘</string>
-    <string name="about">이 프로그램은</string>
-    <string name="about_license">이 애플리케이션은 GPLv3 licence 에 따라 배포됩니다</string>
-    <string name="about_unrar_version">UnRAR 버전: %s</string>
-    <string name="about_version">버전: %s</string>
-    <string name="about_revision">수정: %s</string>
-    <string name="about_build_date">빌드된 날짜: %s</string>
-    <string name="licenses_waiting">라이센스 업데이트 중…</string>
-    <string name="album_downloading">\"%s\" 다운로드 중…</string>
-    <string name="app_name">Comics Reader</string>
-    <string name="bookmark_help">절대 경로(/Pictures, /Download 등)나 URL(domain.com/comics/index.xml 등)을 입력할 수 있습니다. 경로가 /로 시작하지 않으면 자동으로 맨 앞에 http:// 가 붙게 됩니다. \"원격 앨범\"에 대한 자세한 내용은 \"도움말\"을 참조하세요.</string>
-    <string name="bookmark_title">제목</string>
-    <string name="bookmark_url">폴더, URL</string>
-    <string name="bookmarks">북마크 </string>
-    <string name="bookmarks_add">추가</string>
-    <string name="bookmarks_edit">편집</string>
-    <string name="bookmarks_help">북마크를 편집하거나 삭제하려면 길게 </string>
-    <string name="bookmarks_load">불러오기</string>
-    <string name="bookmarks_remove">삭제</string>
-    <string name="bookmarks_title">북마크 </string>
-    <string name="browse">열기</string>
-    <string name="browser_title">파일 </string>
-    <string name="bytes">bytes</string>
-    <string name="changelog">변경 </string>
-    <string name="close">닫기</string>
-    <string name="confirm_delete_album">이 앨범을 삭제하시겠습니까?</string>
-    <string name="confirm_delete_bookmark">이 북마크를 삭제하시겠습니까?</string>
-    <string name="confirm_open_folder">이 폴더에는 이미지 파일이 없습니다. 앨범으로 여시겠습니까?</string>
-    <string name="cover">표지</string>
-    <string name="dialog_album_delete">삭제</string>
-    <string name="dialog_album_size">크기: %1$d %2$s</string>
-    <string name="dialog_album_title">제목</string>
-    <string name="dialog_confirm_title">확인</string>
-    <string name="dialog_error_title">에러</string>
-    <string name="dialog_progress_browser_message">로딩중…</string>
-    <string name="error_no_album_loaded">파일을 선택하려면 메뉴를 사용하세요</string>
-    <string name="error_no_connection_available">인터넷이 연결되어있지 않습니다</string>
-    <string name="error_no_external_storage">외장 메모리를 찾을 수 없습니다</string>
-    <string name="error_no_room">외장메모리가 부족하여 이 앨범을 다운받을 수 없습니다</string>
-    <string name="error_out_of_memory">메모리가 부족합니다. \"설정\"에서 이미지의 품질이나 해상도를 내려야 합니다. 그렇지 않으면 위험을 감수하고 현재 설정을 유지합니다.</string>
-    <string name="error_unable_to_write">외장메모리에 작성할 수 없습니다</string>
-    <string name="external_storage">외장메모리</string>
-    <string name="first_page">첫 페이지</string>
-    <string name="help">도움말</string>
-    <string name="kbytes">KB</string>
-    <string name="last_page">마지막 페이지</string>
-    <string name="mbytes">MB</string>
-    <string name="next_page">다음 페이지</string>
-    <string name="no">아니오</string>
-    <string name="pages">페이지 이동하기</string>
-    <string name="preference_category_advanced">고급 설정</string>
-    <string name="preference_category_cache">캐시</string>
-    <string name="preference_category_view">보기</string>
-    <string name="preference_clear_cache_albums">앨범 지우기</string>
-    <string name="preference_clear_cache_albums_summary">모든 저장된 원격 앨범 삭제</string>
-    <string name="preference_clear_cache_albums_toast">모든 저장된 앨범이 삭제되었습니다</string>
-    <string name="preference_clear_cache_thumbnails">썸네일 지우기</string>
-    <string name="preference_clear_cache_thumbnails_summary">모든 썸네일 삭제</string>
-    <string name="preference_clear_cache_thumbnails_toast">모든 썸네일이 삭제되었습니다</string>
-    <string name="preference_double_page_label">더블 페이지 모드</string>
-    <string name="preference_double_page_summary">두 페이지를 한 화면에 보기</string>
-    <string name="preference_fast_scroll_label">빠른 스크롤</string>
-    <string name="preference_fast_scroll_summary">리스트를 빠르게 스크롤 할 수 있는 스크롤 바 생성</string>
-    <string name="preference_fit_to_screen_label">화면에 맞춤</string>
-    <string name="preference_fit_to_screen_summary">이미지가 화면 해상도보다 작을 경우 확대</string>
-    <string name="preference_full_screen_label">풀 스크린</string>
-    <string name="preference_full_screen_summary">상태 바 숨기기(가능할 경우)</string>
-    <string name="preference_high_quality_label">32bit 컬러</string>
-    <string name="preference_high_quality_summary">경고! 이 옵션은 속도를 저하하고 메모리를 더 소모할 수 있습니다</string>
-    <string name="preference_overlay_duration_label">페이지 수</string>
-    <string name="preference_overlay_duration_summary">페이지 수가 보여지는 시간</string>
-    <string name="preference_sample_label">이미지 크기 강제 변환</string>
-    <string name="preference_sample_summary">메모리 소모를 줄이기 위해 로딩 시간동안 이미지 크기를 변환합니다</string>
-    <string name="preference_zoom_label">확대</string>
-    <string name="preference_zoom_summary">페이지 크기 모드 변경</string>
-    <string name="preference_category_misc">기타</string>
-    <string name="preference_about">ComicsReader 에 대해</string>
-    <string name="preference_about_summary">버전 &amp; 3rd party licenses</string>
-    <string name="previous_page">이전 페이지</string>
-    <string name="settings">설정</string>
-    <string name="yes">예</string>
-    <string name="username">유저명</string>
-    <string name="password">패스워드</string>
-    <string name="remember_password">패스워드 기억하기</string>
-    <string name="contributors_label">공헌자</string>
-    <string name="contributors">- Jules Blok (natural ordering of page numbers and auto-rotation implementation)\n- ultrapeer (Turkish translation and French typos)\n- Zufre (Spanish translation)\n- Kathjal on Transifex (Italian translation)\n- Shark103 on Transifex (Polish translation)\n- Xesusmosquera on Transifex (Galician translation)\n- Evropi on Transifex (Greek translation)\n- Anonymous (Russian translation)\n- Marcelo Ghelman on Transifex (Portuguese translation)</string>
-    <string name="browser_album_title">제목 없음</string>
-    <string name="preference_edges_resistance_label">테두리 저항</string>
-    <string name="preference_edges_resistance_summary">페이지를 넘길 때의 저항</string>
-    <string name="preference_page_transition_speed_label">페이지 넘김 속도</string>
-    <string name="preference_page_transition_speed_summary">다음/이전 페이지 넘김 애니메이션 속도</string>
-    <string name="preference_reading_direction_label">읽는 방향 오른쪽에서 왼쪽으로</string>
-    <string name="preference_reading_direction_summary">다음 페이지를 넘기려면 왼쪽으로 스와이프</string>
-    <string name="preference_auto_rotate_label">자동 화면 회전</string>
-    <string name="preference_auto_rotate_summary">(실험적 기능)각 페이지마다 맞는 방향으로 화면 회전</string>
-    <string name="no_data">No data</string>
-    <string name="fullscreen_notice">풀 스크린 모드를 끄고 옵션 메뉴를 보이게 하려면 위에서 아래로 스크롤 하세요</string>
-    <string name="quit">종료</string>
-    <string name="thumbnail">썸네일</string>
+  <string name="icon">아이콘</string>
+  <string name="about">이 프로그램은</string>
+  <string name="about_license">이 애플리케이션은 GPLv3 licence 에 따라 배포됩니다</string>
+  <string name="about_translator">Korean translation by Jang \"palindrom615\"</string>
+  <string name="about_unrar_version">UnRAR 버전: %s</string>
+  <string name="about_version">버전: %s</string>
+  <string name="about_revision">수정: %s</string>
+  <string name="about_build_date">빌드된 날짜: %s</string>
+  <string name="licenses_waiting">라이센스 업데이트 중…</string>
+  <string name="album_downloading">\"%s\" 다운로드 중…</string>
+  <string name="app_name">Comics Reader</string>
+  <string name="bookmark_help">절대 경로(/Pictures, /Download 등)나 URL(domain.com/comics/index.xml 등)을 입력할 수 있습니다. 경로가 /로 시작하지 않으면 자동으로 맨 앞에 http:// 가 붙게 됩니다. \"원격 앨범\"에 대한 자세한 내용은 \"도움말\"을 참조하세요.</string>
+  <string name="bookmark_title">제목</string>
+  <string name="bookmark_url">폴더, URL</string>
+  <string name="bookmarks">북마크 </string>
+  <string name="bookmarks_add">추가</string>
+  <string name="bookmarks_edit">편집</string>
+  <string name="bookmarks_help">북마크를 편집하거나 삭제하려면 길게 </string>
+  <string name="bookmarks_load">불러오기</string>
+  <string name="bookmarks_remove">삭제</string>
+  <string name="bookmarks_title">북마크 </string>
+  <string name="browse">열기</string>
+  <string name="browser_title">파일 </string>
+  <string name="bytes">bytes</string>
+  <string name="changelog">변경 </string>
+  <string name="close">닫기</string>
+  <string name="confirm_delete_album">이 앨범을 삭제하시겠습니까?</string>
+  <string name="confirm_delete_bookmark">이 북마크를 삭제하시겠습니까?</string>
+  <string name="confirm_open_folder">이 폴더에는 이미지 파일이 없습니다. 앨범으로 여시겠습니까?</string>
+  <string name="cover">표지</string>
+  <string name="dialog_album_delete">삭제</string>
+  <string name="dialog_album_size">크기: %1$d %2$s</string>
+  <string name="dialog_album_title">제목</string>
+  <string name="dialog_confirm_title">확인</string>
+  <string name="dialog_error_title">에러</string>
+  <string name="dialog_progress_browser_message">로딩중…</string>
+  <string name="error_no_album_loaded">파일을 선택하려면 메뉴를 사용하세요</string>
+  <string name="error_no_connection_available">인터넷이 연결되어있지 않습니다</string>
+  <string name="error_no_external_storage">외장 메모리를 찾을 수 없습니다</string>
+  <string name="error_no_room">외장메모리가 부족하여 이 앨범을 다운받을 수 없습니다</string>
+  <string name="error_out_of_memory">메모리가 부족합니다. \"설정\"에서 이미지의 품질이나 해상도를 내려야 합니다. 그렇지 않으면 위험을 감수하고 현재 설정을 유지합니다.</string>
+  <string name="error_unable_to_write">외장메모리에 작성할 수 없습니다</string>
+  <string name="external_storage">외장메모리</string>
+  <string name="first_page">첫 페이지</string>
+  <string name="help">도움말</string>
+  <string name="kbytes">KB</string>
+  <string name="last_page">마지막 페이지</string>
+  <string name="mbytes">MB</string>
+  <string name="next_page">다음 페이지</string>
+  <string name="no">아니오</string>
+  <string name="pages">페이지 이동하기</string>
+  <string name="preference_category_advanced">고급 설정</string>
+  <string name="preference_category_cache">캐시</string>
+  <string name="preference_category_view">보기</string>
+  <string name="preference_clear_cache_albums">앨범 지우기</string>
+  <string name="preference_clear_cache_albums_summary">모든 저장된 원격 앨범 삭제</string>
+  <string name="preference_clear_cache_albums_toast">모든 저장된 앨범이 삭제되었습니다</string>
+  <string name="preference_clear_cache_thumbnails">썸네일 지우기</string>
+  <string name="preference_clear_cache_thumbnails_summary">모든 썸네일 삭제</string>
+  <string name="preference_clear_cache_thumbnails_toast">모든 썸네일이 삭제되었습니다</string>
+  <string name="preference_double_page_label">더블 페이지 모드</string>
+  <string name="preference_double_page_summary">두 페이지를 한 화면에 보기</string>
+  <string name="preference_fast_scroll_label">빠른 스크롤</string>
+  <string name="preference_fast_scroll_summary">리스트를 빠르게 스크롤 할 수 있는 스크롤 바 생성</string>
+  <string name="preference_fit_to_screen_label">화면에 맞춤</string>
+  <string name="preference_fit_to_screen_summary">이미지가 화면 해상도보다 작을 경우 확대</string>
+  <string name="preference_full_screen_label">풀 스크린</string>
+  <string name="preference_full_screen_summary">상태 바 숨기기(가능할 경우)</string>
+  <string name="preference_high_quality_label">32bit 컬러</string>
+  <string name="preference_high_quality_summary">경고! 이 옵션은 속도를 저하하고 메모리를 더 소모할 수 있습니다</string>
+  <string name="preference_overlay_duration_label">페이지 수</string>
+  <string name="preference_overlay_duration_summary">페이지 수가 보여지는 시간</string>
+  <string name="preference_sample_label">이미지 크기 강제 변환</string>
+  <string name="preference_sample_summary">메모리 소모를 줄이기 위해 로딩 시간동안 이미지 크기를 변환합니다</string>
+  <string name="preference_zoom_label">확대</string>
+  <string name="preference_zoom_summary">페이지 크기 모드 변경</string>
+  <string name="preference_category_misc">기타</string>
+  <string name="preference_about">ComicsReader 에 대해</string>
+  <string name="preference_about_summary">버전 &amp; 3rd party licenses</string>
+  <string name="previous_page">이전 페이지</string>
+  <string name="settings">설정</string>
+  <string name="yes">예</string>
+  <string name="username">유저명</string>
+  <string name="password">패스워드</string>
+  <string name="remember_password">패스워드 기억하기</string>
+  <string name="contributors_label">공헌자</string>
+  <string name="browser_album_title">제목 없음</string>
+  <string name="preference_edges_resistance_label">테두리 저항</string>
+  <string name="preference_edges_resistance_summary">페이지를 넘길 때의 저항</string>
+  <string name="preference_page_transition_speed_label">페이지 넘김 속도</string>
+  <string name="preference_page_transition_speed_summary">다음/이전 페이지 넘김 애니메이션 속도</string>
+  <string name="preference_reading_direction_label">읽는 방향 오른쪽에서 왼쪽으로</string>
+  <string name="preference_reading_direction_summary">다음 페이지를 넘기려면 왼쪽으로 스와이프</string>
+  <string name="preference_auto_rotate_label">자동 화면 회전</string>
+  <string name="preference_auto_rotate_summary">(실험적 기능)각 페이지마다 맞는 방향으로 화면 회전</string>
+  <string name="no_data">No data</string>
+  <string name="fullscreen_notice">풀 스크린 모드를 끄고 옵션 메뉴를 보이게 하려면 위에서 아래로 스크롤 하세요</string>
+  <string name="quit">종료</string>
+  <string name="thumbnail">썸네일</string>
 </resources>
