--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,75 +1,75 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="icon">Ikona</string>
-    <string name="about">O…</string>
-    <string name="about_license">Ta aplikacja jest opublikowana zgodnie z licenją GPLv3:</string>
-    <string name="about_translator">Polish translation by Shark103</string>
-    <string name="about_unrar_version">Wersja UnRAR: %s</string>
-    <string name="about_version">Wersja: %s</string>
-    <string name="about_revision">Korekta: %s</string>
-    <string name="about_build_date">Data stworzenia: %s</string>
-    <string name="licenses_waiting">Proszę czekać, trwa aktualizacja licencji…</string>
-    <string name="album_downloading">Pobieranie \"%s\"…</string>
-    <string name="app_name">Comics Reader</string>
-    <string name="bookmark_help">Możesz użyć absolutnej ścieżki zaczynającej się od / (np /Pobrane czy /Obrazy) lub adresu url (np. domain.com/comics/index.xml). Żeby dowiedzieć się więcej sprawdź \"Pomoc\" podmenu \"Zdalne albumy\".</string>
-    <string name="bookmark_title">Tytuł</string>
-    <string name="bookmark_url">Folder lub Adres</string>
-    <string name="bookmarks">Zakładki</string>
-    <string name="bookmarks_add">Dodaj</string>
-    <string name="bookmarks_edit">Edytuj</string>
-    <string name="bookmarks_help">Przytrzymaj dłużej na zakładce by edytować lub usunąć.</string>
-    <string name="bookmarks_load">Załaduj</string>
-    <string name="bookmarks_remove">Usuń</string>
-    <string name="bookmarks_title">Menadżer zakładek </string>
-    <string name="browse">Przeglądaj</string>
-    <string name="browser_title">Przeglądarka</string>
-    <string name="bytes">bajty</string>
-    <string name="changelog">Dziennik zmian</string>
-    <string name="close">Zamknij</string>
-    <string name="confirm_delete_album">Czy chcesz usunąć ten album?</string>
-    <string name="confirm_delete_bookmark">Czu chcesz usunąć tą zakładkę?</string>
-    <string name="confirm_open_folder">Ten folder zawiera pliki które nie są obrazami. Czy chcesz go otworzyć jako album?</string>
-    <string name="cover">Okładka</string>
-    <string name="dialog_album_delete">Usuń</string>
-    <string name="dialog_album_size">Rozmiar: %1$d %2$s</string>
-    <string name="dialog_album_title">Tytuł</string>
-    <string name="dialog_confirm_title">Potwierdź</string>
-    <string name="dialog_error_title">Błąd</string>
-    <string name="dialog_progress_browser_message">Proszę czekać trwa ładowanie…</string>
-    <string name="error_no_album_loaded">Nie wybrano pliku. Proszę użyć menu w celu wybrania pliku.</string>
-    <string name="error_no_connection_available">Brak połączenia z siecią.</string>
-    <string name="error_no_external_storage">Nie można znaleźć zewnętrzej pamięci.</string>
-    <string name="error_no_room">Brak wystarczającej ilości pamięci by pobrać album na pamięć wewnętrzną.</string>
-    <string name="error_out_of_memory">Brak pamięci, proszę zmniejszyć jakość obrazów albo rozdzielczości w \"Ustawienia\", możesz również kontynuować na własną odpowiedzialność.</string>
-    <string name="error_unable_to_write">Nie można zapisać do pamięci zewnętrznej.</string>
-    <string name="external_storage">Pamięć zewnętrzna</string>
-    <string name="first_page">Pierwsze strona</string>
-    <string name="help">Pomoc</string>
-    <string name="kbytes">KB</string>
-    <string name="last_page">Ostatnia strona</string>
-    <string name="mbytes">MB</string>
-    <string name="next_page">Następna strona</string>
-    <string name="no">Nie</string>
-    <string name="pages">Idź do strony</string>
-    <string name="preference_category_advanced">Zaawansowane ustawienia</string>
-    <string name="preference_category_cache">Bufor</string>
-    <string name="preference_category_view">Widok</string>
-    <string name="preference_clear_cache_albums">Wyczyść albumy</string>
-    <string name="preference_clear_cache_albums_summary">Usuń wszystkie pobrane do buforu albumy</string>
-    <string name="preference_clear_cache_albums_toast">Wszystkie pobrane albumy zostały wyczyszone</string>
-    <string name="preference_clear_cache_thumbnails">Usuń miniaturki</string>
-    <string name="preference_clear_cache_thumbnails_summary">Usuń wygenerowane lub pobrane miniatury</string>
-    <string name="preference_clear_cache_thumbnails_toast">Wszystkie miniatuki zostały wyczyszczane </string>
-    <string name="preference_full_screen_label">Pełen ekran</string>
-    <string name="preference_high_quality_label">32bity kolorów</string>
-    <string name="preference_overlay_duration_label">Numer strony</string>
-    <string name="preference_zoom_label">Zoom</string>
-    <string name="preference_category_misc">Różne </string>
-    <string name="previous_page">Poprzednia strona</string>
-    <string name="settings">Ustawienia</string>
-    <string name="yes">Tak</string>
-    <string name="username">Nazwa użytkownika</string>
-    <string name="password">Hasło</string>
-    <string name="remember_password">Zapamiętaj hasło</string>
-    <string name="browser_album_title">Brak tytułu</string>
+  <string name="icon">Ikona</string>
+  <string name="about">O…</string>
+  <string name="about_license">Ta aplikacja jest opublikowana zgodnie z licenją GPLv3:</string>
+  <string name="about_translator">Polish translation by Jan \"Shark103\" Bielak</string>
+  <string name="about_unrar_version">Wersja UnRAR: %s</string>
+  <string name="about_version">Wersja: %s</string>
+  <string name="about_revision">Korekta: %s</string>
+  <string name="about_build_date">Data stworzenia: %s</string>
+  <string name="licenses_waiting">Proszę czekać, trwa aktualizacja licencji…</string>
+  <string name="album_downloading">Pobieranie \"%s\"…</string>
+  <string name="app_name">Comics Reader</string>
+  <string name="bookmark_help">Możesz użyć absolutnej ścieżki zaczynającej się od / (np /Pobrane czy /Obrazy) lub adresu url (np. domain.com/comics/index.xml). Żeby dowiedzieć się więcej sprawdź \"Pomoc\" podmenu \"Zdalne albumy\".</string>
+  <string name="bookmark_title">Tytuł</string>
+  <string name="bookmark_url">Folder lub Adres</string>
+  <string name="bookmarks">Zakładki</string>
+  <string name="bookmarks_add">Dodaj</string>
+  <string name="bookmarks_edit">Edytuj</string>
+  <string name="bookmarks_help">Przytrzymaj dłużej na zakładce by edytować lub usunąć.</string>
+  <string name="bookmarks_load">Załaduj</string>
+  <string name="bookmarks_remove">Usuń</string>
+  <string name="bookmarks_title">Menadżer zakładek </string>
+  <string name="browse">Przeglądaj</string>
+  <string name="browser_title">Przeglądarka</string>
+  <string name="bytes">bajty</string>
+  <string name="changelog">Dziennik zmian</string>
+  <string name="close">Zamknij</string>
+  <string name="confirm_delete_album">Czy chcesz usunąć ten album?</string>
+  <string name="confirm_delete_bookmark">Czu chcesz usunąć tą zakładkę?</string>
+  <string name="confirm_open_folder">Ten folder zawiera pliki które nie są obrazami. Czy chcesz go otworzyć jako album?</string>
+  <string name="cover">Okładka</string>
+  <string name="dialog_album_delete">Usuń</string>
+  <string name="dialog_album_size">Rozmiar: %1$d %2$s</string>
+  <string name="dialog_album_title">Tytuł</string>
+  <string name="dialog_confirm_title">Potwierdź</string>
+  <string name="dialog_error_title">Błąd</string>
+  <string name="dialog_progress_browser_message">Proszę czekać trwa ładowanie…</string>
+  <string name="error_no_album_loaded">Nie wybrano pliku. Proszę użyć menu w celu wybrania pliku.</string>
+  <string name="error_no_connection_available">Brak połączenia z siecią.</string>
+  <string name="error_no_external_storage">Nie można znaleźć zewnętrzej pamięci.</string>
+  <string name="error_no_room">Brak wystarczającej ilości pamięci by pobrać album na pamięć wewnętrzną.</string>
+  <string name="error_out_of_memory">Brak pamięci, proszę zmniejszyć jakość obrazów albo rozdzielczości w \"Ustawienia\", możesz również kontynuować na własną odpowiedzialność.</string>
+  <string name="error_unable_to_write">Nie można zapisać do pamięci zewnętrznej.</string>
+  <string name="external_storage">Pamięć zewnętrzna</string>
+  <string name="first_page">Pierwsze strona</string>
+  <string name="help">Pomoc</string>
+  <string name="kbytes">KB</string>
+  <string name="last_page">Ostatnia strona</string>
+  <string name="mbytes">MB</string>
+  <string name="next_page">Następna strona</string>
+  <string name="no">Nie</string>
+  <string name="pages">Idź do strony</string>
+  <string name="preference_category_advanced">Zaawansowane ustawienia</string>
+  <string name="preference_category_cache">Bufor</string>
+  <string name="preference_category_view">Widok</string>
+  <string name="preference_clear_cache_albums">Wyczyść albumy</string>
+  <string name="preference_clear_cache_albums_summary">Usuń wszystkie pobrane do buforu albumy</string>
+  <string name="preference_clear_cache_albums_toast">Wszystkie pobrane albumy zostały wyczyszone</string>
+  <string name="preference_clear_cache_thumbnails">Usuń miniaturki</string>
+  <string name="preference_clear_cache_thumbnails_summary">Usuń wygenerowane lub pobrane miniatury</string>
+  <string name="preference_clear_cache_thumbnails_toast">Wszystkie miniatuki zostały wyczyszczane </string>
+  <string name="preference_full_screen_label">Pełen ekran</string>
+  <string name="preference_high_quality_label">32bity kolorów</string>
+  <string name="preference_overlay_duration_label">Numer strony</string>
+  <string name="preference_zoom_label">Zoom</string>
+  <string name="preference_category_misc">Różne </string>
+  <string name="previous_page">Poprzednia strona</string>
+  <string name="settings">Ustawienia</string>
+  <string name="yes">Tak</string>
+  <string name="username">Nazwa użytkownika</string>
+  <string name="password">Hasło</string>
+  <string name="remember_password">Zapamiętaj hasło</string>
+  <string name="browser_album_title">Brak tytułu</string>
 </resources>
